Update 'o-theme-selector' styling (to ensure it has a z-index larger than the app's background.

--- a/src/app/styles/objects/o-theme-selector.css
+++ b/src/app/styles/objects/o-theme-selector.css
@@ -1,7 +1,10 @@
 .o-theme-selector {
   display: flex;
   flex-direction: column;
+  position: relative;
   padding: 5px;
+  z-index: 999;
+  /* visibility: hidden; */
 }
 .o-theme-selector__radio {
   margin: 5px;
